--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,15 +4,25 @@
     width: 100%;
     justify-content: space-between;
     margin: auto;
-    padding-top: 20px;
+    padding-top: 30px;
+    color: green;
 }
-
+.logo {
+    span {
+    font-size: 36px;
+    font-weight: 700;
+}
+}
 .navbar_links{
     display: flex;
     flex-direction: row;
     gap: 20px;
+
 }
 
 .link{
     color: #008a00;
+    font-size: 24px;
+    margin-top: 10px;
+    font-weight: 500;
 }
