--- a/src/pages/AboutUs/styles.module.css
+++ b/src/pages/AboutUs/styles.module.css
@@ -1,14 +1,12 @@
-.teamContainer {
-    text-align: center;
-    padding: 2rem;
-    background-color: #f5f5f5;
-}
-
 .title {
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 2rem;
     color: #333;
+}
+
+.about_us{
+    margin: auto;
 }
 
 .grid {
