--- a/src/components/SideBar/styles.module.css
+++ b/src/components/SideBar/styles.module.css
@@ -14,7 +14,9 @@
     }
   }
   .link {
+    
     div {
+      margin-bottom: 16px;
       display: flex;
       gap: 12px;
       align-items: center;
