--- a/src/pages/Dashboard/styles.module.css
+++ b/src/pages/Dashboard/styles.module.css
@@ -1,3 +1,29 @@
-.dashboard_page{
-width: 100%;
+.dashboard_page {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 50px;
+  .dashboard_page_input {
+    width: 50%;
+    padding: 24px;
+    background-color: #51b998;
+    label {
+      color: white;
+      font-size: 16px;
+      font-weight: 500;
+    }
+    div {
+      margin-top: 16px;
+      background-color: #fff;
+      width: 100%;
+      height: 50px;
+      border-radius: 4px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
 }
