--- a/src/components/AccordionSection/accordionsection.module.css
+++ b/src/components/AccordionSection/accordionsection.module.css
@@ -1,17 +1,22 @@
 .container {
-    max-width: 600px;
+width: 100%;
     margin: auto;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding-bottom: 40px;
     padding-top: 50px;
+}
+.container h3{
+margin-bottom: 10px;
 }
 
 .section {
     border-bottom: 1px solid #ddd;
     border-radius: 10px;
     border: 1px solid #666;
+    border-bottom-color:#666 ;
 }
 
 .section:last-child {
@@ -19,6 +24,7 @@
 }
 
 .header {
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -54,12 +60,13 @@
 .header h3 {
     flex: 1;
     margin: 0;
-    font-size: 16px;
+    font-size:20px;
     font-weight: 500;
 }
 
 .h3{
-    font-size: 2em;
+    font-size: 36px;
+    font-weight: bold;
     text-align: center;
     color: #2c5f2d;
 }
@@ -71,4 +78,7 @@
     color: #333;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+.content p {
+    font-size: 17px;
 }
