--- a/src/components/ManageAccounts/manageaccounts.module.css
+++ b/src/components/ManageAccounts/manageaccounts.module.css
@@ -9,6 +9,7 @@
 
 .manage_accounts h2 {
     color: #2c5f2d;
+    font-size: 36px;
 }
 
 .features {
@@ -30,6 +31,7 @@
 
 .feature_item img {
     width: 100%;
+    height: 160px;
     border-radius: 8px;
     margin-bottom: 10px;
 }
@@ -42,5 +44,5 @@
 
 .feature_item p {
     font-size: 14px;
-    color: #555;
+    color: #403f3f;
 }
