--- a/src/components/Banner/banner.module.css
+++ b/src/components/Banner/banner.module.css
@@ -5,16 +5,24 @@
     background: linear-gradient(to right, #0fa450, #41f361);
     color: #fff;
     margin-top: 50px;
+    border-radius: 10px !important;
+
 }
 
 .content {
     max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: -200px;
+    margin-top: 30px;
 }
 
 .title {
-    font-size: 2rem;
+    font-size: 32px;
     font-weight: bold;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .banner_img img{
@@ -34,7 +42,13 @@
     color: #008a00;
     border: none;
     padding: 10px 20px;
-    font-size: 1rem;
+    max-width: 150px;
+    font-size: 18px;
+    margin-top: 20px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-weight: 600;
     border-radius: 5px;
     cursor: pointer;
 }
