--- a/src/pages/AboutUs/styles.module.css
+++ b/src/pages/AboutUs/styles.module.css
@@ -1,7 +1,7 @@
 .title {
-    font-size: 3em;
+    font-size: 40px;
     font-weight: bold;
-    margin-bottom: 2rem;
+    margin-bottom: 0px;
     color: #333;
 }
 
@@ -12,7 +12,7 @@
     gap: 25px;
     align-items: center;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top:30px;
 }
 
 .grid {
