--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,12 @@
 }
 
 .container{
-  max-width: 1200px;
+  max-width: 100%;
   margin: auto;
+}
+.container_home{
+  max-width: 1200px;
+  margin: 0px auto;
 }
 
 body {
