--- a/src/pages/CustomerTypeDashboard/styles.module.css
+++ b/src/pages/CustomerTypeDashboard/styles.module.css
@@ -4,4 +4,12 @@
         margin-top: 30px;
         width: 85%;
     }
+    .graph_border{
+        width: fit-content;
+        width: 100%;
+        margin-top: 50px;
+        border: 1px solid #333;
+        border-radius: 10px;
+        padding: 20px;
+    }
 }
