--- a/src/pages/QuantityDashboard/styles.module.css
+++ b/src/pages/QuantityDashboard/styles.module.css
@@ -2,6 +2,12 @@
     &:first-child{
         margin: 0 auto;
         margin-top: 30px;
-        width: 60%;
+        width: 50%;
+    }
+    .graph_border{
+        width: 100%;
+        border: 1px solid #333;
+        border-radius: 10px;
+        padding: 20px;
     }
 }
