--- a/src/components/ManageAccounts/manageaccounts.module.css
+++ b/src/components/ManageAccounts/manageaccounts.module.css
@@ -27,6 +27,12 @@
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.feature_item:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 
 .feature_item img {
