--- a/src/pages/AboutUs/styles.module.css
+++ b/src/pages/AboutUs/styles.module.css
@@ -20,6 +20,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1.5rem;
+    width: 40%;
 }
 
 .card {
@@ -36,12 +37,13 @@
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 
-.avatar {
+.avatar img{
     width: 80px;
     height: 80px;
     background-color: #ddd;
     border-radius: 50%;
     margin: 0 auto 1rem auto;
+    object-fit: cover;
 }
 
 .role {
